# xiaocai-instance

./: .dockerignore  .gitignore  AGENTS.md  QUICKSTART.md  README.md  about-cn-en-review.html  home-cn-en-review.html  partner-cn-en-review.html
adapters/http_api/: .env.example  Dockerfile  README.md  auth.py  chat.py  main.py  pyproject.toml  requirements.txt
adapters/http_api/src/xiaocai_instance_api.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
adapters/http_api/tests/: conftest.py  test_analysis_content_schema_rules.py  test_analysis_mode_parity.py  test_auth.py  test_caigou_china_auth.py  test_chat.py  test_chat_analysis_projection_trigger.py  test_chat_core_compat.py  test_chat_downstream_projection.py  test_chat_field_candidates.py  test_chat_mode_regression.py  test_chat_mode_resolution.py  test_chat_prior_context.py  test_chat_replay.py  test_chat_request_guard.py  test_chat_stream_artifact_projection.py  test_chat_stream_projection.py  test_chat_stream_text.py  test_chat_workbench_projection.py  test_config_center.py  test_domains.py  test_flare_dependency_versions.py  test_flare_updates.py  test_instance_profile_projection.py  test_integrations.py  test_kernel_client.py  test_kernel_prompt_compat.py  test_kernel_request_body_contract.py  test_local_e2e_parity.py  test_no_legacy_mainline.py  test_project_ownership.py  test_release_regression.py  test_security_isolation.py  test_session_function_type_compat.py  test_session_message_window.py  test_session_persistence_adapter.py  test_sessions.py  test_sources.py  test_stream_turn.py  test_xiaocai_domain_config.py  (+1 more)
(+499 files in other folders)
